# TestIt

./: Makefile  README.md  config.ver  old_setup.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml
docs/: index.md
src/: main.py  run.py  run_util.py  setup.py  test.py  verifit.py  verifit_util.py
src/testit/: __init__.py  main.py  run.py  run_util.py  testit.py  testit_util.py
src/testit/templates/: config.test  testit_golden.py  verifit_golden.py
src/verifit/: config.ver  main.py  run.py  run_util.py  verifit.py  verifit_util.py
templates/: verifit_golden.py
