# Copyright (C) 2025 Politecnico di Torino
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "testitpy"
version = "0.3"
authors = [
    {name = "Tommaso Terzano", email = "tommaso.terzano@gmail.com"},
]
description = "A tool for verifying RTL and FPGA models using custom SW applications"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "rich",
    "pexpect",
    "numpy",
    "pyserial",
    "hjson",
    "importlib_resources",
]
license = {file = "LICENSE"}

[project.scripts]
testit = "testit.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
testit = ["templates/*"]
